# pygdal-geo-engineer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: template_devcontainer.json
config/: catalog.yaml  parameters.yaml
docs/: cheatsheet_linux_shell.md  docker_install.md  linux_set_up.md  project_structure.md
gdal_examples/: README.md
gdal_examples/python-scripts/: gdal_attribute-lookup.py
gdal_examples/shell-scripts/: gdal_filegdb-gpkg.sh  gdal_gpkg-info.sh  metadata.txt
notebooks/: 2023.01_conservation_and_preservation.ipynb  2024.01_conservation_and_preservation.ipynb  README.md  gdal_test.ipynb
notebooks/examples/: 00_notebook_template.ipynb
projects/: README.md
projects/notebooks/: 0000.00_notebook_template.ipynb  2023.12_calculate_3-30-300_rule.ipynb  2023.12_map_3-30-300_rule.ipynb  2024.01_conservation_and_preservation.ipynb
projects/scripts/: 2024.06_vern_og_bevaring.py
sample_project/: gdal_test.py  main.py  settings.py
src/: README.md  config.py
src/py_scripts/: __init__.py  config.py  decorators.py  logger.py  utils.py
src/python/: ar50-bonitet-lookup.py  duckdb_utils.py  lookup.py  ogr_utils.py
src/shell/: gdal_gpkg-info.sh  gdal_import-to-gpkg.sh  gdal_reproject.sh
src/shell_scripts/: gdal_cog.sh  gdal_copy-file-bbox.sh  gdal_copy-file.sh  gdal_filegdb-gpkg.sh  gdal_gpkg-info.sh  gdal_import_csv_to_gpkg.sh  generate_cog.sh  generate_pmtiles.sh  raster_operations.sh  (+1 more)
tests/: __init__.py  test_config.py  test_config.yaml  test_logger.py  test_utils.py  utils.py
(+19 files in other folders)
